--- a/Sketches/SmartLampBluetoothTest/bin/AndroidManifest.xml
+++ b/Sketches/SmartLampBluetoothTest/bin/AndroidManifest.xml
@@ -8,13 +8,16 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.gergelydezso.smartlampsdk.MainActivity"
+            android:name="com.gergelydezso.smartlampsdk.TestActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
