--- a/Sketches/SmartLampBluetoothTest/AndroidManifest.xml
+++ b/Sketches/SmartLampBluetoothTest/AndroidManifest.xml
@@ -14,17 +14,28 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
         <activity
-            android:name="com.gergelydezso.smartlampsdk.TestActivity"
-            android:label="@string/app_name" >
+            android:name="com.gergelydezso.smartlampsdk.connection.bluetooth.BluetoothConnectionActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.gergelydezso.smartlampsdk.TestActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/select_device" />
+        <activity
+            android:name="com.gergelydezso.smartlampsdk.connection.bluetooth.BluetoothDeviceListActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/select_device"
+            android:theme="@android:style/Theme.Dialog" />
     </application>
 
 </manifest>
