--- a/Sketches/SmartLampBluetoothTest/AndroidManifest.xml
+++ b/Sketches/SmartLampBluetoothTest/AndroidManifest.xml
@@ -19,8 +19,7 @@
             android:name="com.gergelydezso.smartlampsdk.connection.bluetooth.BluetoothConnectionActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,12 +29,11 @@
         <activity
             android:name="com.gergelydezso.smartlampsdk.TestActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:label="@string/select_device" />
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.gergelydezso.smartlampsdk.connection.bluetooth.BluetoothDeviceListActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:label="@string/select_device"
-            android:theme="@android:style/Theme.Dialog" />
+            android:label="@string/select_device" />
     </application>
 
 </manifest>
