--- a/Sketches/SmartLampBluetoothTest/bin/AndroidManifest.xml
+++ b/Sketches/SmartLampBluetoothTest/bin/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="com.gergelydezso.smartlampsdk.connection.bluetooth.BluetoothConnectionActivity"
+            android:name="com.gergelydezso.smartlampsdk.test.BluetoothConnectionActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
@@ -31,7 +31,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.gergelydezso.smartlampsdk.connection.bluetooth.BluetoothDeviceListActivity"
+            android:name="com.gergelydezso.smartlampsdk.test.BluetoothDeviceListActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/select_device" />
     </application>
