--- a/SmartLampSampleApp/bin/AndroidManifest.xml
+++ b/SmartLampSampleApp/bin/AndroidManifest.xml
@@ -8,20 +8,32 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
         <activity
-            android:name="com.gergelydezso.smartlampsdk.sample.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.gergelydezso.smartlampsdk.sample.connection.BluetoothConnectionActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.gergelydezso.smartlampsdk.sample.ui.TestActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.gergelydezso.smartlampsdk.sample.connection.BluetoothDeviceListActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/select_device" />
     </application>
 
 </manifest>
