--- a/SmartLampSampleApp/AndroidManifest.xml
+++ b/SmartLampSampleApp/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -16,10 +16,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="com.gergelydezso.smartlampsdk.sample.connection.BluetoothConnectionActivity"
+            android:name="com.gergelydezso.smartlampsdk.sample.connection.ConnectionConfiguration"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,13 +28,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.gergelydezso.smartlampsdk.sample.ui.TestActivity"
+            android:name="com.gergelydezso.smartlampsdk.sample.control.TestActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait" />
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo" />
         <activity
-            android:name="com.gergelydezso.smartlampsdk.sample.connection.BluetoothDeviceListActivity"
+            android:name="com.gergelydezso.smartlampsdk.connection.bluetooth.BluetoothConnectionActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:label="@string/select_device" />
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Dialog" />
+        <activity
+            android:name="com.gergelydezso.smartlampsdk.connection.bluetooth.BluetoothDeviceListActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Dialog" />
     </application>
 
 </manifest>
