--- a/SmartLampSampleApp/AndroidManifest.xml
+++ b/SmartLampSampleApp/AndroidManifest.xml
@@ -16,9 +16,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="com.gergelydezso.smartlampsdk.sample.connection.ConnectionConfiguration"
-            android:configChanges="orientation|keyboardHidden"
-            android:label="@string/app_name"
+            android:name="com.gergelydezso.smartlampsdk.sample.menu.MenuActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo" >
             <intent-filter>
@@ -28,21 +26,35 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.gergelydezso.smartlampsdk.sample.control.TestActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:label="@string/app_name"
+            android:name="com.gergelydezso.smartlampsdk.sample.test.TestActivity"
+            android:label="Test"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo" />
         <activity
-            android:name="com.gergelydezso.smartlampsdk.connection.bluetooth.BluetoothConnectionActivity"
-            android:configChanges="orientation|keyboardHidden"
+            android:name="com.gergelydezso.smartlampsdk.sample.menu.alarmclock.AlarmClockActivity"
+            android:label="AlarmClock"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.Dialog" />
+            android:theme="@android:style/Theme.Holo" />
         <activity
-            android:name="com.gergelydezso.smartlampsdk.connection.bluetooth.BluetoothDeviceListActivity"
-            android:configChanges="orientation|keyboardHidden"
+            android:name="com.gergelydezso.smartlampsdk.sample.menu.colorcontrol.ColorControlActivity"
+            android:label="ColorControl"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.Dialog" />
+            android:theme="@android:style/Theme.Holo" />
+        <activity
+            android:name="com.gergelydezso.smartlampsdk.sample.menu.motioncontrol.MotionControlActivity"
+            android:label="MotionControl"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo" />
+        <activity
+            android:name="com.gergelydezso.smartlampsdk.sample.menu.musicvisualization.MusicVisualizationActivity"
+            android:label="MusicVisualization"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo" />
+        <activity
+            android:name="com.gergelydezso.smartlampsdk.sample.menu.notifications.NotificationsActivity"
+            android:label="Notifications"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo" />
     </application>
 
 </manifest>
