--- a/SmartLampSampleApp/project.properties
+++ b/SmartLampSampleApp/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../SmartLampSDK
+android.library.reference.1=../../HoloColorPicker
+android.library.reference.2=../SmartLampSDK
