--- a/SmartLampSample/project.properties
+++ b/SmartLampSample/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../../HoloColorPicker
-android.library.reference.2=../../HorizontalVariableListView/HorizontalVariableListView
+android.library.reference.1=../HorizontalVariableListView-master/HorizontalVariableListView
+android.library.reference.2=../HoloColorPicker-master
