Update from old local Repo. (Reformatted using iQuest code style)

--- a/SmartLampSample/project.properties
+++ b/SmartLampSample/project.properties
@@ -12,5 +12,6 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=..\\..\\HorizontalVariableListView\\HorizontalVariableListView
-android.library.reference.2=../../HoloColorPicker
+android.library.reference.1=..\\SmartLampSDK
+android.library.reference.2=..\\..\\HoloColorPicker
+android.library.reference.3=../../HorizontalVariableListView/HorizontalVariableListView
