Bluetooth connection setup modified.

--- a/SmartLampSample/AndroidManifest.xml
+++ b/SmartLampSample/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name="com.gergelydezso.smartlampsdk.sampleapp.intro.Intro"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+            android:theme="@android:style/Theme.Holo.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
