--- a/SmartLampSample/AndroidManifest.xml
+++ b/SmartLampSample/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
         android:largeHeap="true" >
         <activity
             android:name="com.gergelydezso.smartlampsdk.sampleapp.intro.Intro"
