--- a/SmartLampSample/project.properties
+++ b/SmartLampSample/project.properties
@@ -12,6 +12,7 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=..\\SmartLampSDK
-android.library.reference.2=..\\..\\HoloColorPicker
-android.library.reference.3=../../HorizontalVariableListView/HorizontalVariableListView
+android.library.reference.1=../SmartLampSDK
+android.library.reference.2=../HorizontalVariableListView-master/HorizontalVariableListView
+android.library.reference.3=../HoloColorPicker-master
+android.library.reference.4=../../workspace/google-play-services_lib
