--- a/SmartLampSample/AndroidManifest.xml
+++ b/SmartLampSample/AndroidManifest.xml
@@ -38,6 +38,14 @@
             android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
         </activity>
 
+      <activity
+              android:name=".musicvisualization.playlist.PlaylistActivity"
+              android:label="@string/app_name"
+              android:screenOrientation="portrait"
+              android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
+      </activity>
+
+
         <service
             android:name="com.gergelydezso.smartlampsdk.sampleapp.notifications.AccesibilityNotificationListenerService"
             android:label="SmartLamp"
