--- a/SmartLampSample/AndroidManifest.xml
+++ b/SmartLampSample/AndroidManifest.xml
@@ -1,74 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gergelydezso.smartlampsdk.sampleapp"
-    android:versionCode="1"
-    android:versionName="1.0" >
+          package="com.gergelydezso.smartlampsdk.sampleapp"
+          android:versionCode="1"
+          android:versionName="1.0">
 
-    <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="17" />
+  <uses-sdk
+          android:minSdkVersion="14"
+          android:targetSdkVersion="17"/>
 
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+  <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+  <uses-permission android:name="android.permission.BLUETOOTH"/>
+  <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+  <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+  <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
-    <application
-        android:name=".SmartLampSampleApplication"
-        android:allowBackup="true"
-        android:hardwareAccelerated="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:largeHeap="true" >
-        <activity
+  <application
+          android:name=".SmartLampSampleApplication"
+          android:allowBackup="true"
+          android:hardwareAccelerated="true"
+          android:icon="@drawable/ic_launcher"
+          android:label="@string/app_name"
+          android:largeHeap="true">
+    <activity
             android:name="com.gergelydezso.smartlampsdk.sampleapp.intro.Intro"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.NoActionBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@android:style/Theme.Holo.NoActionBar">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+    <activity
             android:name="com.gergelydezso.smartlampsdk.sampleapp.menu.BaseMenuActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
-        </activity>
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+    </activity>
 
-      <activity
-              android:name=".musicvisualization.playlist.PlaylistActivity"
-              android:label="@string/app_name"
-              android:screenOrientation="portrait"
-              android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
-      </activity>
+    <activity
+            android:name=".musicvisualization.playlist.PlaylistActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+    </activity>
 
 
-        <service
+    <service
             android:name="com.gergelydezso.smartlampsdk.sampleapp.notifications.AccesibilityNotificationListenerService"
             android:label="SmartLamp"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE" >
-            <intent-filter>
-                <action android:name="android.accessibilityservice.AccessibilityService" />
-            </intent-filter>
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+      <intent-filter>
+        <action android:name="android.accessibilityservice.AccessibilityService"/>
+      </intent-filter>
 
-            <meta-data
-                android:name="android.accessibilityservice"
-                android:resource="@xml/accessibilityservice" />
-        </service>
+      <meta-data
+              android:name="android.accessibilityservice"
+              android:resource="@xml/accessibilityservice"/>
+    </service>
 
-        <receiver android:name="com.gergelydezso.smartlampsdk.sampleapp.notifications.SMSBroadcastReceiver" >
-            <intent-filter>
-                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
-            </intent-filter>
-        </receiver>
-        <receiver android:name="com.gergelydezso.smartlampsdk.sampleapp.notifications.CallReceiver" >
-            <intent-filter>
-                <action android:name="android.intent.action.PHONE_STATE" />
-            </intent-filter>
-        </receiver>
-    </application>
+    <receiver android:name="com.gergelydezso.smartlampsdk.sampleapp.notifications.SMSBroadcastReceiver">
+      <intent-filter>
+        <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+      </intent-filter>
+    </receiver>
+    <receiver android:name="com.gergelydezso.smartlampsdk.sampleapp.notifications.CallReceiver">
+      <intent-filter>
+        <action android:name="android.intent.action.PHONE_STATE"/>
+      </intent-filter>
+    </receiver>
+  </application>
 
 </manifest>
